--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,7 @@
+.main-bg {
+  background-color: #333;
+}
+
 .banner {
     background: url("./img/home-bg.jpg")
       no-repeat center center;
@@ -53,6 +57,10 @@
     padding-top: 1%;
     color: #fff;
     height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    
   }
   .logo {
     width: 7%;
@@ -61,4 +69,36 @@
     height: 120px;
     
   }
-  
+  .login{
+    padding: 10px;
+    margin: 10px;
+    color: #333;
+  }
+  .register{
+    padding: 10px;
+    margin-top: 150px;
+    color: #333;
+  }
+.banner-login{
+  margin-top: 50px;
+}
+.login-btn{
+  margin-left: 10px;
+}
+.footer1 {
+  background-color: rgb(0, 0, 0);
+  height: 150px;
+}
+.banner-form{
+  background-color: #333;
+  padding-top: 20%;
+  height: 1000px;
+}
+.card-form {
+  /* margin-top: 80px;
+  padding-top: 100px; */
+  width: 50%;
+}
+.btn{
+  width: max-content !important;
+}
